<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/shade_yellow"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/n_org"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="160dp">
        <include layout="@layout/activity_network"/>
        <include layout="@layout/activity_common_header"/>
    </LinearLayout>
    <LinearLayout
        android:layout_above="@id/bottomLayout"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:backgroundTint="@color/white"
        android:background="@drawable/padding_overlap"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="115dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:visibility="gone"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/build_no"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:lineSpacingExtra="3.4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>

        <TextView
            android:fontFamily="@font/roboto_bold"
            android:textSize="23dp"
             android:id="@+id/header"
            android:text="The Foundation of \nInnovation"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
             android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
             android:text="@string/header_1"
            android:textSize="15dp"
            android:textColor="@color/gray"
            android:lineSpacingExtra="3.4dp"
             android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <ImageView
             android:src="@drawable/header_icon_2"
            android:scaleType="center"
            android:layout_marginTop="-130dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="450dp"/>
        <TextView
            android:fontFamily="@font/roboto_bold"
            android:textSize="23dp"
             android:text="Our Vision"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:gravity="center"
             android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/gray"
             android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/header_2"
            android:textSize="15dp"
            android:lineSpacingExtra="3.4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <ImageView
             android:src="@drawable/header_icon_1"
            android:scaleType="center"
             android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="350dp"/>
        <TextView
            android:fontFamily="@font/roboto_bold"
            android:textSize="23dp"
            android:text="Our Mission"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/gray"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/header_2"
            android:textSize="15dp"
            android:lineSpacingExtra="3.4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <ImageView
            android:src="@drawable/header_icon_3"
            android:scaleType="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="350dp"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottomLayout"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/bottom_navigation_bar"/>

        <!-- <com.etebarian.meowbottomnavigation.MeowBottomNavigation
             android:layout_width="match_parent"
             android:id="@+id/btm_nav"
             android:layout_gravity="bottom"
             app:mbn_backgroundBottomColor="@color/purple_200"
             app:mbn_circleColor="@color/black"
             app:mbn_selectedIconColor="@color/white"
             app:mbn_defaultIconColor="@color/white"
             android:layout_height="wrap_content"/>
         <View
             android:background="@color/n_org"
             android:layout_width="match_parent"
             android:layout_height="10dp"/>-->
    </LinearLayout>
</RelativeLayout>