<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/n_blue"
    android:layout_height="match_parent">
    <include
        android:id="@+id/linear"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/new_header_layout"/>


    <LinearLayout
        android:layout_above="@+id/bottom_nv"
        android:layout_below="@id/linear"
        android:backgroundTint="@color/n_bg"
        android:background="@drawable/rect_top_only"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/back_arrow"
                android:layout_marginRight="17dp"
                android:src="@drawable/n_leftarrow"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
            <TextView
                android:id="@+id/title"
                android:text="DSR"
                android:textSize="16dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/n_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/search"
                    android:visibility="gone"
                    android:layout_marginRight="17dp"
                    android:src="@drawable/n_search"
                    android:layout_width="25dp"
                    android:layout_height="25dp"/>
                <ImageView
                    android:id="@+id/img1"
                    android:visibility="gone"
                    android:src="@drawable/n_filter"
                    android:layout_width="25dp"
                    android:layout_height="25dp"/>
            </LinearLayout>
        </LinearLayout>

         <!--android:scrollbars="horizontal"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarThumbHorizontal="@drawable/scrollbar"-->


        <ScrollView
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">




                <TextView
                    android:layout_marginTop="15dp"
                    android:textSize="13dp"
                    android:text="@string/block"
                    android:fontFamily="@font/inter_18pt_medium"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_marginTop="4dp"
                    android:background="@drawable/rectangle_outer_gray"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:background="@null"
                        android:id="@+id/edt_blocking_factor"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textColorHint="@color/gray"
                        android:paddingTop="7dp"
                        android:paddingLeft="3dp"
                        android:scrollbars="vertical"
                        android:overScrollMode="always"
                         android:inputType="textMultiLine"
                        android:paddingBottom="7dp"
                        android:layout_marginRight="10dp"
                        android:paddingRight="7dp"
                        android:textSize="13dp"
                        android:fontFamily="@font/inter_18pt_medium"
                        android:textColor="@color/gray_dark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:id="@+id/mike"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="right"
                        app:tint="@color/n_org"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/microphone"
                        />
                </LinearLayout>


                <TextView
                    android:layout_marginTop="8dp"
                    android:textSize="13dp"
                    android:text="@string/nxt_wk"
                    android:fontFamily="@font/inter_18pt_medium"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:background="@drawable/rectangle_outer_gray"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ScrollView
                        android:scrollbars="none"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:background="@null"
                            android:id="@+id/edt_next_week"
                            android:paddingLeft="3dp"
                            android:layout_gravity="start"
                            android:inputType="textMultiLine"

                            android:gravity="start"
                            android:overScrollMode="always"
                            android:scrollbars="vertical"
                            android:textColorHint="@color/gray"
                            android:paddingTop="7dp"
                             android:paddingBottom="7dp"
                            android:layout_marginRight="10dp"
                            android:paddingRight="7dp"
                            android:textSize="13dp"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@color/gray_dark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </ScrollView>

                    <ImageView
                        android:id="@+id/mike1"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:tint="@color/n_org"
                        android:layout_gravity="right"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/microphone"
                        />
                </LinearLayout>
                <com.tuyenmonkey.mkloader.MKLoader
                    android:visibility="gone"
                    android:id="@+id/loader"
                    android:layout_gravity="center"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:mk_type="Whirlpool"
                    app:mk_color="@color/n_org"
                    />
                <LinearLayout
                    android:id="@+id/oth_layout"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="8dp"
                        android:textSize="13dp"
                        android:text="Other Request / Feedback"
                        android:fontFamily="@font/inter_18pt_medium"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:background="@drawable/rectangle_outer_gray"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/edt_others"
                            android:hint="others"
                             android:inputType="textMultiLine"

                            android:background="@null"
                            android:layout_gravity="start"
                            android:gravity="start"
                            android:scrollbars="vertical"
                            android:overScrollMode="always"
                            android:textColorHint="@color/gray"
                            android:paddingTop="7dp"
                            android:paddingLeft="3dp"
                            android:paddingBottom="7dp"
                            android:layout_marginRight="10dp"
                            android:paddingRight="7dp"
                            android:textSize="13dp"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@color/gray_dark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <ImageView
                            android:id="@+id/mike2"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            app:tint="@color/n_org"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="right"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/microphone"
                            />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_marginTop="8dp"
                    android:textSize="13dp"
                    android:text="@string/send_to"
                    android:fontFamily="@font/inter_18pt_medium"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:id="@+id/spinner_layout"
                    android:layout_marginTop="5dp"
                    android:padding="3dp"
                    android:orientation="vertical"
                    android:background="@drawable/rectangle_outer_gray"
                     android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="Select"
                        android:textSize="13dp"
                        android:fontFamily="@font/inter_18pt_medium"
                        android:id="@+id/send_to_text"
                        android:padding="3dp"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <Spinner
                        android:visibility="gone"
                        android:id="@+id/send_to_spinner"
                        android:padding="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:layout_marginTop="20dp"
                    android:textSize="13dp"
                    android:text="@string/send_cc"
                    android:fontFamily="@font/inter_18pt_medium"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RelativeLayout
                    android:id="@+id/gitnameRL"
                     android:layout_marginTop="5dp"
                    android:padding="7dp"
                    android:background="@drawable/rectangle_outer_gray"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <!--    <com.hootsuite.nachos.NachoTextView
                            android:background="@null"
                            android:id="@+id/git_url_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            />-->
                    <TextView
                        android:id="@+id/send_cc"
                        android:textSize="13dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/inter_18pt_medium"
                        android:textColorHint="@color/gray"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="Send CC"
                        android:padding="8dp" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/bottom_request_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                     android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_marginRight="10dp"
                        android:orientation="horizontal"
                        android:id="@+id/request_layout"
                        android:paddingRight="15dp"
                        android:paddingLeft="15dp"
                        android:backgroundTint="@color/n_green"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/rectangle_padding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/icon"
                            app:tint="@color/white"
                            android:src="@drawable/requesst_icon_new"
                            android:layout_width="20dp"
                            android:layout_height="20dp"/>
                        <TextView
                            android:id="@+id/submit_txt"
                            android:text="Send"
                            android:layout_marginLeft="5dp"
                            android:layout_alignParentLeft="true"
                            android:layout_marginRight="5dp"
                            android:textSize="14dp"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </RelativeLayout>


            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <include
        android:id="@+id/bottom_nv"
        layout="@layout/new_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true" />


</RelativeLayout>